crates/sui-prover/tests/snapshots/extra_bpl/invalid_extension.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: extra_bpl path must have .bpl extension: 'simple.ok.move'
   ┌─ tests/inputs/extra_bpl/invalid_extension.fail.move:9:1
   │  
 9 │ ╭ fun test_invalid_extension_spec() {
10 │ │     ensures(true);
11 │ │ }
   │ ╰─^
