crates/sui-prover/tests/snapshots/extra_bpl/missing_file.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: extra_bpl path does not exist: 'nonexistent.bpl' (resolved to 'tests/inputs/extra_bpl/nonexistent.bpl')
   ┌─ tests/inputs/extra_bpl/missing_file.fail.move:9:1
   │  
 9 │ ╭ fun test_missing_file_spec() {
10 │ │     ensures(true);
11 │ │ }
   │ ╰─^
